// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        data-color="neutral"
        data-show="md"
        popovertarget="usermenu2"
        type="button"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-size="xs"
            data-variant="default"
          >
            Admin
          </p>
        </div>
        <span
          aria-hidden="true"
          data-variant="circle"
          role="img"
        >
          <span>
            SH
          </span>
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06z"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
      </button>
      <div
        data-placement="bottom-end"
        data-variant="default"
        id="<removed>"
        popover="manual"
      >
        <h2>
          Bytt profil
        </h2>
        <ul>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                aria-hidden="true"
                data-variant="circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewbox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    fill="currentColor"
                    fill-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_i_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_i_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_i_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_i_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        data-color="neutral"
        data-show="md"
        popovertarget="usermenu2"
        type="button"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-size="xs"
            data-variant="default"
          >
            Admin
          </p>
        </div>
        <span
          aria-hidden="true"
          data-variant="circle"
          role="img"
        >
          <span>
            SH
          </span>
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06z"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
      </button>
      <div
        data-placement="bottom-end"
        data-variant="default"
        id="<removed>"
        popover="manual"
      >
        <h2>
          Bytt profil
        </h2>
        <ul>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                aria-hidden="true"
                data-variant="circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewbox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    fill="currentColor"
                    fill-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_10_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_10_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_10_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_10_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        data-color="neutral"
        data-show="md"
        popovertarget="usermenu2"
        type="button"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-size="xs"
            data-variant="default"
          >
            Admin
          </p>
        </div>
        <span
          aria-hidden="true"
          data-variant="circle"
          role="img"
        >
          <span>
            SH
          </span>
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06z"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
      </button>
      <div
        data-placement="bottom-end"
        data-variant="default"
        id="<removed>"
        popover="manual"
      >
        <h2>
          Bytt profil
        </h2>
        <ul>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                aria-hidden="true"
                data-variant="circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewbox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    fill="currentColor"
                    fill-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_1e_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_1e_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_1e_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_1e_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Story 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        data-color="neutral"
        data-show="md"
        popovertarget="usermenu2"
        type="button"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-size="xs"
            data-variant="default"
          >
            Admin
          </p>
        </div>
        <span
          aria-hidden="true"
          data-variant="circle"
          role="img"
        >
          <span>
            SH
          </span>
        </span>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewbox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06z"
            fill="currentColor"
            fill-rule="evenodd"
          >
          </path>
        </svg>
      </button>
      <div
        data-placement="bottom-end"
        data-variant="default"
        id="<removed>"
        popover="manual"
      >
        <h2>
          Bytt profil
        </h2>
        <ul>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                aria-hidden="true"
                data-variant="circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewbox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    fill="currentColor"
                    fill-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewbox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_4_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_4_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_4_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_4_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;
